--- a/misc/folder.html
+++ b/misc/folder.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         .folder, .folder details{max-width: 750px;
-        border-left: solid #15c405 3px;
+        border-left: solid #15c405 2px;
         padding: 0 13px;
         margin: 10px 0px}
         ul{margin: 0px}
@@ -33,7 +33,7 @@
         <h1 style="font-size: 3rem">folder</h1>
     
         <details class="navbar">
-            <summary><a href="/website/misc">back to misc</a></summary>
+            <summary style="font-weight: normal;"><a href="/website/misc">back to misc</a></summary>
             <a href="journal">journal</a> . 
             <a href="phrases">wall</a> . 
             <b>folder</b><br>
