--- a/misc/folder.html
+++ b/misc/folder.html
@@ -33,7 +33,7 @@
         <h1 style="font-size: 3rem">folder</h1>
     
         <details class="navbar">
-            <summary style="font-weight: normal;"><a href="/website/misc">back to misc</a></summary>
+            <summary style="font-weight: normal; font-size: 1rem;"><a href="/website/misc">back to misc</a></summary>
             <a href="journal">journal</a> . 
             <a href="phrases">wall</a> . 
             <b>folder</b><br>
