--- a/misc/folder/difference.html
+++ b/misc/folder/difference.html
@@ -13,11 +13,12 @@
             <div>
             <p><a href="/website/misc/folder">back to folder</a></p>
         </div>
+        </div>
         <div class="main">
             
     <h1>about difference</h1>
     
-        <a href="/website/misc/folder">back to folder</a> . 
+        <a href="/website/misc/folder">back to folder</a>
 
         <p>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
@@ -35,3 +36,30 @@
         </div>
     </body>
 </html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <title>about</title>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        </style></head>
+
+    <body><div class="page"><div class="main">
+    <h1>about difference in general</h1>
+    <a class="back" href="/website/misc/folder">← folder</a>
+    <p>
+        Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
+        <br>It'd be boring if everyone'd be the same, if nothing new happened each day, wouldn't it?
+        <br>Why question and shun and fight differences instead of embracing and accepting them?
+        <br>
+        <br>All are different, but not unequal; everyone is human, and thus deserve to be treated as such, with love, food, shelter, freedom of thought and expression, all the good stuff.
+        <br>Aside from that, everyone is different in many ways; ≠ country of origin, ≠ age, ≠ weight, ≠ gender identity, ≠ color of skin, ≠ religion, a bunch of stuff.
+        <br>
+        <br><i>But none of that matters. Because we're all people.</i>
+        <br>
+        <br><b><i>→ Everyone is equal and different, but not more or less than anyone else.</i></b>
+        <br>
+        <br>A bit confusing, but i hope you get it.</p>
+    </div></div></body></html>
