--- a/misc/folder/difference.html
+++ b/misc/folder/difference.html
@@ -18,7 +18,7 @@
             
     <h1>about difference</h1>
     
-        <a href="/website/misc/folder">back to folder</a>
+        <div class="navbar"><a href="/website/misc/folder">back to folder</a></div>
 
         <p>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
