--- a/musicians.html
+++ b/musicians.html
@@ -21,7 +21,7 @@
         <div class="sidebar">
             <div>
             <p><a href="/website/home">home</a></p>
-            <ul>
+            <ul style="line-height: 1.4">
                 <li><a href="/website/about">about</a></li>
                 <li><b>musicians</b></li>
                 <li><a href="/website/websites">websites</a></li>
