--- a/misc.html
+++ b/misc.html
@@ -26,7 +26,7 @@
                 <li><a href="words">words</a></li>
                 <li><a href="doodles">doodles</a></li>
                 <li><a href="blender">blender</a></li>
-                <li><b>misc</b></li>
+                <li><b><i>misc</i></b></li>
                 <li><a href="buttons">buttons</a></li>
                 <li><a href="sitelog">sitelog</a></li>
             </ul></div>
@@ -43,7 +43,7 @@
             <a href="words">words</a> . 
             <a href="doodles">doodles</a> . 
             <a href="blender">blender</a> . 
-            <b>misc</b><br>
+            <b><i>misc</i></b><br>
             <a href="buttons">buttons</a> . 
             <a href="sitelog">sitelog</a>
         </details>
