--- a/misc/folder.html
+++ b/misc/folder.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a href="journal">journal</a></li>
                 <li><a href="phrases">wall</a></li>
-                <li><b>folder</b></li>
+                <li><b><i>folder</i></b></li>
             </ul></div>
         </div>
         <div class="main">
@@ -36,7 +36,7 @@
             <summary style="font-weight: normal; font-size: 1rem;"><a href="/website/misc">back to misc</a></summary>
             <a href="journal">journal</a> . 
             <a href="phrases">wall</a> . 
-            <b>folder</b><br>
+            <b><i>folder</i></b><br>
         </details>
 
         <p>You open the folder.</p>
