--- a/misc/journal.html
+++ b/misc/journal.html
@@ -22,7 +22,7 @@
             <div>
             <p><a href="/website/misc">misc</a></p>
             <ul>
-                <li><b>journal</b></li>
+                <li><b><i>journal</i></b></li>
                 <li><a href="phrases">wall</a></li>
                 <li><a href="folder">folder</a></li>
             </ul></div>
@@ -33,7 +33,7 @@
     
         <details class="navbar">
             <summary><a href="/website/misc">back to misc</a></summary>
-            <b>journal</b> . 
+            <b><i>journal</i></b> . 
             <a href="phrases">wall</a> . 
             <a href="folder">folder</a><br>
         </details>
