--- a/sitelog.html
+++ b/sitelog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;1,700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,700;1,700&display=swap" rel="stylesheet"> 
         <title>sitelog</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
@@ -15,7 +15,7 @@
             h2{font-size: large}
             h2::before{content:"> "; color: #a87000}
             p, ul{font-size: 1rem}
-            a{color: #ffa900; text-decoration-color: #a87000; text-decoration-thickness: 2px;}
+            a{color: #ffa900; font-weight: bold; font-style: italic; text-decoration-color: #a87000; text-decoration-thickness: 2px;}
             a:hover{text-decoration-color: #ffa900; background-color: #ffa900; color: #101010}
         </style>
     </head>
@@ -33,7 +33,7 @@
                 <li><a href="/website/blender">blender</a></li>
                 <li><a href="/website/misc">misc</a></li>
                 <li><a href="/website/buttons">buttons</a></li>
-                <li><b>sitelog</b></li>
+                <li><b><i>sitelog</i></b></li>
             </ul></div>
         </div>
         <div class="main">
@@ -50,7 +50,7 @@
             <a href="/website/blender">blender</a> . 
             <a href="/website/misc">misc</a><br>
             <a href="/website/buttons">buttons</a> . 
-            <b>sitelog</b>
+            <b><i>sitelog</i></b>
         </details>
 
         
