--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -29,7 +29,7 @@
             <p><a href="/website/misc">misc</a></p>
             <ul>
                 <li><a href="journal">journal</a></li>
-                <li><b>wall</b></li>
+                <li><b><i>wall</i></b></li>
                 <li><a href="folder">folder</a></li>
             </ul></div>
         </div>
@@ -40,7 +40,7 @@
         <details class="navbar">
             <summary><a href="/website/misc">back to misc</a></summary>
             <a href="journal">journal</a> . 
-            <b>wall</b> . 
+            <b><i>wall</i></b> . 
             <a href="folder">folder</a><br>
         </details>
 
