--- a/sitelog.html
+++ b/sitelog.html
@@ -54,7 +54,7 @@
         </details>
 
         
-    <details style="margin-bottom: 40px"><summary><a>More about the site</a></summary><p> 
+    <details style="margin-bottom: 40px; margin-top: 12px"><summary><a>More about the site</a></summary><p> 
         i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>
         in existence since july 2022<br>
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h
