--- a/misc/folder.html
+++ b/misc/folder.html
@@ -5,12 +5,11 @@
         <title>> folder</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
-        .folder, .folder details{max-width: 750px;
+        .folder{max-width: 750px;
         border-left: solid #15c405 2px;
         padding: 0 13px;
         margin: 10px 0px}
         ul{margin: 0px}
-        .folder details{margin-left: 10px}
         summary{font-size: 1.1rem; font-weight: bold;}
         @media only screen and (max-width: 600px) {
             .folder{margin: 8px -26px}
@@ -48,15 +47,6 @@
             <li><a href="folder/index3">index3</a>: a simpler version without a sidebar.</li>
             <li><a href="folder/building.png">building</a>: the first image i meant to put on the current welcome page.</li>
         </ul>
-        <details>
-            <summary style="line-height: 1.4"><a>earlier version of intro text</a>: <span style="font-size: 1rem; font-weight: normal">I wanted to change this to be more about the site (or as best as i could), 
-                and move the contact and other info to the "about me" page.</span></summary>
-                <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
-                Making this website has been really fun, and i hope you like having a gander at it.<br>
-                This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
-                Also: they/them, pt-br, en, tok, <18yo</p>
-                <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
-        </details>
     </details>
 
     <details class="folder">
