--- a/misc/folder.html
+++ b/misc/folder.html
@@ -23,7 +23,7 @@
             <p><a href="/website/misc">misc</a></p>
             <ul>
                 <li><a href="journal">journal</a></li>
-                <li><a href="phrases">wal</a></li>
+                <li><a href="phrases">wall</a></li>
                 <li><b><i>folder</i></b></li>
             </ul></div>
         </div>
