--- a/doodles.html
+++ b/doodles.html
@@ -24,7 +24,8 @@
         .sidebar{background-color: #d4d4d4;
             box-shadow: #40404040 4px 0 4px}
         @media only screen and (max-width: 600px) {
-            body{background-color: #d4d4d4}
+            body{background-color: #d4d4d4;
+            background-image:none}
             .main{background-image:url(doodles/background.jpg);
             box-shadow: #40404080 0 0 8px}
         }
