--- a/doodles/people.html
+++ b/doodles/people.html
@@ -28,7 +28,8 @@
         @media only screen and (min-width: 500px){
             #drawings{column-count: 2;}}
         @media only screen and (max-width: 600px) {
-            body{background-color: #d4d4d4}
+            body{background-color: #d4d4d4;
+            background-image:none}
             .main{background-image:url(doodles/background.jpg);
             box-shadow: #40404080 0 0 8px}
         }
