--- a/doodles/people.html
+++ b/doodles/people.html
@@ -30,7 +30,7 @@
         @media only screen and (max-width: 600px) {
             body{background-color: #d4d4d4;
             background-image:none}
-            .main{background-image:url(doodles/background.jpg);
+            .main{background-image:url(background.jpg);
             box-shadow: #40404080 0 0 8px}
         }
         </style>
