--- a/buttons.html
+++ b/buttons.html
@@ -5,17 +5,25 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>buttons</title>
         <link href="styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
-            body{background-color: #b8cadf;
-                color: #101010;
+            body{--light-blue: #b8cadf;
+                --dark-blue: #9dafc3;
+                --grey: #5d5e6c;
+                --black: #101010;
+                background-color: #b8cadf;
+                color: var(--black);
                 font-family: 'Literata', serif;}
             h1{font-size: min(10vw, 3rem); font-style: italic;}
             h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
-            h2::before{content: "- "; color: #5d5e6c;}
-            a{color: #101010; text-decoration-color:#5d5e6c;text-decoration-thickness: 2px;}
-            a:hover{text-decoration-color:#101010; background-color: #101010; color: #b8cadf}
+            h2::before{content: "- "; color: var(--grey);}
+            a{color: var(--black); text-decoration-color: var(--grey);text-decoration-thickness: 2px;}
+            a:hover{text-decoration-color:var(--black); background-color: var(--black); color: var(--light-blue)}
             a.button::after, a.button::before{content:""}
-            a.button:hover{background-color: #00000000; text-decoration-color: #000000}
-            .sidebar, .main{border-color: #5d5e6c}</style>
+            a.button:hover{background-color: #00000000; text-decoration-color: #00000000}
+            .sidebar{background-color: var(--darkblue)}
+            @media only screen and (max-width: 600px) {
+            body{background-color: #d4d4d4;
+            background-image:none}
+            .main{background-color: var(--light-blue)}}</style>
     </head>
 
     <body>
