--- a/buttons.html
+++ b/buttons.html
@@ -19,9 +19,9 @@
             a:hover{text-decoration-color:var(--black); background-color: var(--black); color: var(--light-blue)}
             a.button::after, a.button::before{content:""}
             a.button:hover{background-color: #00000000; text-decoration-color: #00000000}
-            .sidebar{background-color: var(--darkblue)}
+            .sidebar{background-color: var(--dark-blue)}
             @media only screen and (max-width: 600px) {
-            body{background-color: #d4d4d4;
+            body{background-color: var(--dark-boue);
             background-image:none}
             .main{background-color: var(--light-blue)}}</style>
     </head>
