--- a/buttons.html
+++ b/buttons.html
@@ -21,7 +21,7 @@
             a.button:hover{background-color: #00000000; text-decoration-color: #00000000}
             .sidebar{background-color: var(--dark-blue)}
             @media only screen and (max-width: 600px) {
-            body{background-color: var(--dark-boue);
+            body{background-color: var(--dark-blue);
             background-image:none}
             .main{background-color: var(--light-blue)}}</style>
     </head>
