--- a/doodles.html
+++ b/doodles.html
@@ -19,7 +19,7 @@
         h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
         h2::before{content: "- "; color: #5d5e6c;}
         a{color: #101010; text-decoration-color:#5d5e6c; text-decoration-thickness: 2px;}
-        a:hover{text-decoration-color:#101010; background-color: #101010; color: #a2a4a3}
+        a:hover{text-decoration-color:#101010; background-color: #101010; color: #d4d4d4}
         a.button:hover{text-decoration-color:#00000000; background-color: #00000000}
         .sidebar{background-color: #d4d4d4;
             box-shadow: #40404040 4px 0 4px}
