--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -11,9 +11,13 @@
         .page{border-color: #ddba39}
         #images{line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
         #images img{width: 100%; margin-top: 12px}
-        .sidebar, .page{border-color: #ddba39}
+        .sidebar{background-color: #161d41}
         @media only screen and (max-width: 500px) {
             #images{column-count: 1;}
+        }
+        @media only screen and (max-width: 600px) {
+            body{background-color: #161d41}
+            .main{background-color: #000429}
         }
         </style>
     </head>
