--- a/sitelog.html
+++ b/sitelog.html
@@ -21,6 +21,9 @@
                 body{background-color: #282828}
                 .main{background-color: #101010}
             }
+            @media only screen and (max-width: 800px) {
+                .sidebar div{margin: 24px auto}
+            }
         </style>
     </head>
 
