--- a/websites.html
+++ b/websites.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites</title>
-        <link href="styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
-        </style></head>
-    <body><div class="page"><div class="main">
-        <h1>cool websites</h1>
-        ← <a class="back" href="home">home</a>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        </style>
+    </head>
+
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/home">home</a></p>
+            <ul>
+                <li><a href="/website/about">about</a></li>
+                <li><a href="/website/musicians">musicians</a></li>
+                <li><b>websites</b></li>
+                <li><a href="/website/words">words</a></li>
+                <li><a href="/website/doodles">doodles</a></li>
+                <li><a href="/website/blender">blender</a></li>
+                <li><a href="/website/misc">misc</a></li>
+                <li><a href="/website/buttons">buttons</a></li>
+                <li><a href="/website/sitelog">sitelog</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>cool websites</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/home">home</a></summary>
+            <a href="/website/about">about</a> . 
+            <a href="/website/musicians">musicians</a> . 
+            <b>websites</b><br>
+            <a href="/website/words">words</a> . 
+            <a href="/website/doodles">doodles</a> . 
+            <a href="/website/blender">blender</a> . 
+            <a href="/website/misc">misc</a><br>
+            <a href="/website/buttons">buttons</a> . 
+            <a href="/website/sitelog">sitelog</a>
+        </details>
+
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
         <h2>→ <a href="websites/math">math and physics (15)</a></h2>
         <h2>→ <a href="websites/lang">language (5)</a></h2>
@@ -15,4 +47,6 @@
         <h2>→ <a href="websites/misc">miscellaneously interesting (11)</a></h2>
 
         <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a> or <a href="mailto:cvni1981@gmail.com">email</a>!</p>
-    </div></body>
+        </div>
+    </body>
+</html>
