--- a/websites.html
+++ b/websites.html
@@ -3,7 +3,7 @@
     <head>
         <title>websites</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style>
     </head>
 
