--- a/websites/geo.html
+++ b/websites/geo.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites: geography</title>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
-        </style></head>
-    <body><div class="page"><div class="main">
-        <h1>geography and flags</h1>
-        ← <a class="back" href="/website/websites">back</a>
+        </style>
+    </head>
+
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/websites">websites</a></p>
+            <ul>
+                <li><a href="math">math</a></li>
+                <li><a href="lang">language</a></li>
+                <li><b>geography</b></li>
+                <li><a href="misc">misc.</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>geography and flags</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/websites">back to websites</a></summary>
+            <a href="math">math</a> . 
+            <a href="lang">language</a> . 
+            <b>geography</b> . 
+            <a href="misc">misc.</a>
+        </details>
+
         <h2>→ <a href="https://www.jasondavies.com/maps/transition/">Map Projection Transitions</a></h2>
         <p>An awesome visualization by Jason Davies of many map projections. <a href="https://www.jasondavies.com/maps/">Their website</a> also has many other cool map stuffs.</p>
 
@@ -19,4 +41,6 @@
 
         <h2>→ <a href="https://heywhatsthat.com/">HeyWhatsThat</a></h2>
         <p>A neat tool that shows how far you can see from a location, as well as what peaks can be seen.</p>
-    </div></body>
+        </div>
+    </body>
+</html>
