--- a/websites/lang.html
+++ b/websites/lang.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites: language</title>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
-        </style></head>
-    <body><div class="page"><div class="main">
-        <h1>language</h1>
-        ← <a class="back" href="/website/websites">back</a>
-        <h2>→ <a href="https://decodeunicode.org/">decodeunicode</a></h2>
+        </style>
+    </head>
+
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/websites">websites</a></p>
+            <ul>
+                <li><a href="math">math</a></li>
+                <li><b>language</b></li>
+                <li><a href="geo">geography</a></li>
+                <li><a href="misc">misc.</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>language</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/websites">back to websites</a></summary>
+            <a href="math">math</a> . 
+            <a>language</b> . 
+            <a href="geo">geography</a> . 
+            <a href="misc">misc.</a>
+        </details>
+
         <p>A site with characters from a TON of languages from all around the world, as encoded by Unicode 11.0 (kinda out of date but still awesome). By Johhannes Bergerhausen and Siri Poarangan.</p>
 
         <h2>→ <a href="https://www.ethnologue.com/">Ethnologue</a></h2>
@@ -22,4 +43,6 @@
 
         <h2>→ <a href="https://arxiv.org/pdf/1012.5962.pdf">Annotated  English</a></h2>
         <p>A paper by José Hernández-Orallo with a way to write English with unambiguous spelling.</p>
-    </div></body>
+        </div>
+    </body>
+</html>
