--- a/websites/math.html
+++ b/websites/math.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites: math</title>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
-        </style></head>
-    <body><div class="page"><div class="main">
-        <h1>math and physics</h1>
-        ← <a class="back" href="/website/websites">back</a>
+        </style>
+    </head>
+
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/websites">websites</a></p>
+            <ul>
+                <li><b>math</b></li>
+                <li><a href="lang">language</a></li>
+                <li><a href="geo">geography</a></li>
+                <li><a href="misc">misc.</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>math and physics</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/websites">back to websites</a></summary>
+            <b>math</b> . 
+            <a href="lang">language</a> . 
+            <a href="geo">geography</a> . 
+            <a href="misc">misc.</a>
+        </details>
+
         <h2>→ <a href="https://codepen.io/akm2/full/rHIsa">Gravity Points</a></h2>
         <p>A cool interactive simulation of orbiting points by Akimitsu Hamamuro.</p>
 
@@ -52,5 +74,6 @@
 
         <h2>→ <a href="https://oeis.org/">The On-Line Encyclopedia of Integer Sequences</a></h2>
         <p>A database of over 300000 integer sequences and lots of info about them. Founded by N. Sloane in 1964.</p>
-        <p>↑ <a href="#">back to top</a></p>
-    </div></body>
+        </div>
+    </body>
+</html>
