--- a/websites/misc.html
+++ b/websites/misc.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>websites: miscellaneous</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title>websites: misc.</title>
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
-        </style></head>
-    <body><div class="page"><div class="main">
-        <h1>miscellaneously interesting</h1>
-        ← <a class="back" href="/website/websites">back</a>
+        </style>
+    </head>
+
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/websites">websites</a></p>
+            <ul>
+                <li><a href="math">math</a></li>
+                <li><a href="lang">language</a></li>
+                <li><a href="geo">geography</a></li>
+                <li><b>misc.</b></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>miscellaneously interesting</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/websites">back to websites</a></summary>
+            <a href="math">math</a> . 
+            <a href="lang">language</a> . 
+            <a href="geo">geography</a> . 
+            <b>misc.</b>
+        </details>
+
         <h2>→ <a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></h2>
         <p>A live feed of the lovely sea otters at Monterey Bay Aquarium.</p>
 
@@ -40,5 +62,6 @@
 
         <h2>→ <a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page">CLG Wiki</a></h2>
         <p>A wiki dedicated to collecting closing production logos and TV ID's from around the world.</p>
-        <p>↑ <a href="#">back to top</a></p>
-    </div></body>
+        </div>
+    </body>
+</html>
