--- a/websites/lang.html
+++ b/websites/lang.html
@@ -25,7 +25,7 @@
         <details class="navbar">
             <summary><a href="/website/websites">back to websites</a></summary>
             <a href="math">math</a> . 
-            <a>language</b> . 
+            <b>language</b> . 
             <a href="geo">geography</a> . 
             <a href="misc">misc.</a>
         </details>
