--- a/words.html
+++ b/words.html
@@ -4,9 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words</title>
-        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
-        body{font-family: 'Atkinson Hyperlegible', sans-serif;
-        color: #101010}
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
         summary{font-size: 1.25rem}
         ul{margin-top:0px}
         .small{font-weight: normal; text-decoration-thickness: 1px}
