--- a/words/jan.html
+++ b/words/jan.html
@@ -13,27 +13,27 @@
             <div>
             <p><a href="/website/words">poems</a></p>
             <ul>
-                <li><b>vento</b></li>
+                <li><a href="vento">vento</a></li>
                 <li><a href="sona-pini">sona pini</a></li>
                 <li><a href="ona">ona</a></li>
                 <li><a href="tomo-ni">tomo ni</a></li>
                 <li><a href="suno">suno</a></li>
-                <li><a href="jan">jan</a></li>
+                <li><b>jan</b></li>
                 <li><a href="concreto">concreto</a></li>
             </ul></div>
         </div>
         <div class="main">
             
-    <h1>vento</h1>
+    <h1>jan</h1>
     
         <details class="navbar">
             <summary><a href="/website/words">back to poems</a></summary>
-            <b>vento</b> . 
+            <a href="vento">vento</a> . 
             <a href="sona-pini">sona pini</a> . 
             <a href="ona">ona</a> . 
             <a href="tomo-ni">tomo ni</a> . 
             <a href="suno">suno</a> . 
-            <a href="jan">jan</a> . 
+            <b>jan</b> . 
             <a href="concreto">concreto</a>
         </details>
 
