--- a/words/vento.html
+++ b/words/vento.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: vento</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>
-        @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
-        </style></head>
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
+        </style>
+    </head>
 
-    <body><div class="page"><div class="main">
-        <h1>vento</h1>
-        ← <a class="back" href="/website/words">back</a>
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/words">poems</a></p>
+            <ul>
+                <li><b>vento</b></li>
+                <li><a href="sona-pini">sona pini</a></li>
+                <li><a href="ona">ona</a></li>
+                <li><a href="tomo-ni">tomo ni</a></li>
+                <li><a href="suno">suno</a></li>
+                <li><a href="jan">jan</a></li>
+                <li><a href="concreto">concreto</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>vento</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/words">back to poems</a></summary>
+            <b>vento</b> . 
+            <a href="sona-pini">sona pini</a> . 
+            <a href="ona">ona</a> . 
+            <a href="tomo-ni">tomo ni</a> . 
+            <a href="suno">suno</a> . 
+            <a href="jan">jan</a> . 
+            <a href="concreto">concreto</a>
+        </details>
+
         <p>
             Numa manhã fria.
             <br>Saio dos meus aposentos em rumo ao meu colégio.
@@ -46,5 +71,6 @@
             <br>Momentos como esse me fascinam.
             <br>Um vento me lembra a vida.
         </p>
-        <p>↑ <a href="#">back to top</a></p>
-    </div></div></body></html>
+        </div>
+    </body>
+</html>
