--- a/words/tomo-ni.html
+++ b/words/tomo-ni.html
@@ -1,32 +1,60 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: tomo ni</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>
-        @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
-        </style></head>
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
+        </style>
+    </head>
 
-    <body><div class="page"><div class="main">
-        <h1>tomo ni</h1>
-        ← <a class="back" href="/website/words">back</a>
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/words">poems</a></p>
+            <ul>
+                <li><a href="vento">vento</a></li>
+                <li><a href="sona-pini">sona pini</a></li>
+                <li><a href="ona">ona</a></li>
+                <li><b>tomo ni</b></li>
+                <li><a href="suno">suno</a></li>
+                <li><a href="jan">jan</a></li>
+                <li><a href="concreto">concreto</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>tomo ni</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/words">back to poems</a></summary>
+            <a href="vento">vento</a> . 
+            <a href="sona-pini">sona pini</a> . 
+            <a href="ona">ona</a> . 
+            <b>tomo ni</b> . 
+            <a href="suno">suno</a> . 
+            <a href="jan">jan</a> . 
+            <a href="concreto">concreto</a>
+        </details>
+
         <p>
-        tomo ni li suli a
-        <br>sinpin ona li laso telo walo
-        <br>kule ni li pona mute mute tawa mi
-        <br>supa lape li lon
-        <br>ona li suli li puwa li pona
-        <br>poki len li lon kin
-        <br>supa lape lili li lon sewi ona
-        <br>supa ante li lon poka ona
-        <br>mi ken lukin e mi lon supa ni
-        <br>kasi suli li lon poka ona
-        <br>tomo ni li jo e lupa suli
-        <br>mi lon insa ona la mi ken lukin e kasi mute mute mute a!
-        <br>mi ken lukin e waso mute kin...
-        <br>ona li jo e kule mute, li kalama, li musi
-        <br>mi ken lukin e telo suli kin
-        <br>tomo ni li pona mute tawa mi a
-        </p>
-    </div></div></body></html>
+            tomo ni li suli a
+            <br>sinpin ona li laso telo walo
+            <br>kule ni li pona mute mute tawa mi
+            <br>supa lape li lon
+            <br>ona li suli li puwa li pona
+            <br>poki len li lon kin
+            <br>supa lape lili li lon sewi ona
+            <br>supa ante li lon poka ona
+            <br>mi ken lukin e mi lon supa ni
+            <br>kasi suli li lon poka ona
+            <br>tomo ni li jo e lupa suli
+            <br>mi lon insa ona la mi ken lukin e kasi mute mute mute a!
+            <br>mi ken lukin e waso mute kin...
+            <br>ona li jo e kule mute, li kalama, li musi
+            <br>mi ken lukin e telo suli kin
+            <br>tomo ni li pona mute tawa mi a
+            </p>
+        </div>
+    </body>
+</html>
