changed rest of poems

--- a/words/suno.html
+++ b/words/suno.html
@@ -1,81 +1,108 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: suno</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>
-        @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
-        </style></head>
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
+        </style>
+    </head>
 
-    <body><div class="page"><div class="main">
-        <h1>suno</h1>
-        ← <a class="back" href="/website/words">back</a>
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/words">poems</a></p>
+            <ul>
+                <li><a href="vento">vento</a></li>
+                <li><a href="sona-pini">sona pini</a></li>
+                <li><a href="ona">ona</a></li>
+                <li><a href="tono-ni">tomo ni</a></li>
+                <li><b>suno</b></li>
+                <li><a href="jan">jan</a></li>
+                <li><a href="concreto">concreto</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>suno</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/words">back to poems</a></summary>
+            <a href="vento">vento</a> . 
+            <a href="sona-pini">sona pini</a> . 
+            <a href="ona">ona</a> . 
+            <a href="tomo-ni">tomo ni</a> . 
+            <b>suno</b> . 
+            <a href="jan">jan</a> . 
+            <a href="concreto">concreto</a>
+        </details>
+
         <p>
-        tenpo mun.
-        <br>mi mute li tawa.
-        <br>kalama musi li pona.
-        <br>kon li lete.
-        <br>suno li jelo.
-        <br>sewi li pimeja.
-        <br>sike li suno.
-        <br>lawa li pona.
-        <br>la nimi lili.
-        <br>kon li pona.
-        <br>palisa, kiwen.
-        <br>tenpo poka la suno li weka.
-        <br>jan ala li lon nasin.
-        <br>ante li kama suli.
-        <br>ona li kama.
-        <br>ona li poka.
-        <br>ona li toki.
-        <br>ona li suno.
-        <br>sinpin walo.
-        <br>lawa li monsuta.
-        <br>ona li pana e pilin pona.
-        <br>suno wawa!
-        <br>
-        <br>suno li weka.
-        <br>ale li loje li walo.
-        <br>weka li suno.
-        <br>suno li tawa wawa.
-        <br>li monsuta.
-        <br>li pakala.
-        <br>kalama musi li weka.
-        <br>kasi li lon.
-        <br>kalama lili.
-        <br>lon tenpo mute.
-        <br>suno lon weka.
-        <br>sike lili walo.
-        <br>mun pi loje jelo.
-        <br>lukin li pakala.
-        <br>lon pi jan lawa li seme?
-        <br>mi wile sona e ni...
-        <br>
-        <br>kule li weka.
-        <br>suno li kama sin!
-        <br>lupa li pini.
-        <br>telo li pali e nasin.
-        <br>jan lon jasima, li mi ala mi?
-        <br>ni li ken ala mi...
-        <br>ala, ala, ala, ni li mi ala...
-        <br>suno li weka.
-        <br>sin.
-        <br>kule li weka.
-        <br>sin.
-        <br>pipu.
-        <br>suno wawa li tawa poka.
-        <br>wile e pona tawa mi mute.
-        <br>lon sinpin. lon tenpo ale.
-        <br>mi o len e lupa.
-        <br>
-        <br>kasi lon weka.
-        <br>suno pi pana sona.
-        <br>tawa tenpo.
-        <br>mi len e lupa.
-        <br>mi ken ala lukin.
-        <br>kalama musi pi weka sona.
-        <br>tawa ni: tawa pona.
-        </p>
-        <p>↑ <a href="#">back to top</a></p>
-    </div></div></body></html>
+            tenpo mun.
+            <br>mi mute li tawa.
+            <br>kalama musi li pona.
+            <br>kon li lete.
+            <br>suno li jelo.
+            <br>sewi li pimeja.
+            <br>sike li suno.
+            <br>lawa li pona.
+            <br>la nimi lili.
+            <br>kon li pona.
+            <br>palisa, kiwen.
+            <br>tenpo poka la suno li weka.
+            <br>jan ala li lon nasin.
+            <br>ante li kama suli.
+            <br>ona li kama.
+            <br>ona li poka.
+            <br>ona li toki.
+            <br>ona li suno.
+            <br>sinpin walo.
+            <br>lawa li monsuta.
+            <br>ona li pana e pilin pona.
+            <br>suno wawa!
+            <br>
+            <br>suno li weka.
+            <br>ale li loje li walo.
+            <br>weka li suno.
+            <br>suno li tawa wawa.
+            <br>li monsuta.
+            <br>li pakala.
+            <br>kalama musi li weka.
+            <br>kasi li lon.
+            <br>kalama lili.
+            <br>lon tenpo mute.
+            <br>suno lon weka.
+            <br>sike lili walo.
+            <br>mun pi loje jelo.
+            <br>lukin li pakala.
+            <br>lon pi jan lawa li seme?
+            <br>mi wile sona e ni...
+            <br>
+            <br>kule li weka.
+            <br>suno li kama sin!
+            <br>lupa li pini.
+            <br>telo li pali e nasin.
+            <br>jan lon jasima, li mi ala mi?
+            <br>ni li ken ala mi...
+            <br>ala, ala, ala, ni li mi ala...
+            <br>suno li weka.
+            <br>sin.
+            <br>kule li weka.
+            <br>sin.
+            <br>pipu.
+            <br>suno wawa li tawa poka.
+            <br>wile e pona tawa mi mute.
+            <br>lon sinpin. lon tenpo ale.
+            <br>mi o len e lupa.
+            <br>
+            <br>kasi lon weka.
+            <br>suno pi pana sona.
+            <br>tawa tenpo.
+            <br>mi len e lupa.
+            <br>mi ken ala lukin.
+            <br>kalama musi pi weka sona.
+            <br>tawa ni: tawa pona.
+            </p>
+        </div>
+    </body>
+</html>
