--- a/words/ona.html
+++ b/words/ona.html
@@ -1,28 +1,56 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: ona</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>
-        @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
-        </style></head>
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
+        </style>
+    </head>
 
-    <body><div class="page"><div class="main">
-        <h1>ona</h1>
-        ← <a class="back" href="/website/words">back</a>
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/words">poems</a></p>
+            <ul>
+                <li><a href="vento">vento</a></li>
+                <li><a href="sona-pini">sona pini</a></li>
+                <li><b>ona</b></li>
+                <li><a href="tono-ni">tomo ni</a></li>
+                <li><a href="suno">suno</a></li>
+                <li><a href="jan">jan</a></li>
+                <li><a href="concreto">concreto</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>ona</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/words">back to poems</a></summary>
+            <a href="vento">vento</a> . 
+            <a href="sona-pini">sona pini</a> . 
+            <b>ona</b> . 
+            <a href="tomo-ni">tomo ni</a> . 
+            <a href="suno">suno</a> . 
+            <a href="jan">jan</a> . 
+            <a href="concreto">concreto</a>
+        </details>
+
         <p>
-        ona li powe.
-        <br>mi pali e ona.
-        <br>tan la mi sona ala.
-        <br>ken la musi.
-        <br>ona li tawa.
-        <br>mi weka e ona.
-        <br>mi wan taso.
-        <br>mi seme.
-        <br>mi sona ala e mi.
-        <br>mi pilin ala.
-        <br>pilin la mi majuna.
-        <br>mi pakala.
-        </p>
-    </div></div></body></html>
+            ona li powe.
+            <br>mi pali e ona.
+            <br>tan la mi sona ala.
+            <br>ken la musi.
+            <br>ona li tawa.
+            <br>mi weka e ona.
+            <br>mi wan taso.
+            <br>mi seme.
+            <br>mi sona ala e mi.
+            <br>mi pilin ala.
+            <br>pilin la mi majuna.
+            <br>mi pakala.
+            </p>
+        </div>
+    </body>
+</html>
