--- a/words/ona.html
+++ b/words/ona.html
@@ -16,7 +16,7 @@
                 <li><a href="vento">vento</a></li>
                 <li><a href="sona-pini">sona pini</a></li>
                 <li><b>ona</b></li>
-                <li><a href="tono-ni">tomo ni</a></li>
+                <li><a href="tomo-ni">tomo ni</a></li>
                 <li><a href="suno">suno</a></li>
                 <li><a href="jan">jan</a></li>
                 <li><a href="concreto">concreto</a></li>
